--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
+@import "button";
 @import "navbar";
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,600&family=Raleway&display=swap');
