--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <a class="navbar-brand" href="#">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+      <h1 class="logo">MOOOVERS</h1>
   </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,13 +11,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Book a MOOOVER", root_path, class:"main-button" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Become a MOOOVER", root_path, class:"second-button" %>
         </li>
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://previews.123rf.com/images/lar01joka/lar01joka1712/lar01joka171200130/90908712-avatar-of-a-cow.jpg" />
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">See all mooovers in my area</a>
-            <a class="dropdown-item" href="#">See my bookings</a>
+            <a class="dropdown-item" href="#">Update your account</a>
+            <%= link_to "Sign-out", destroy_user_session_path(current_user), class:"dropdown-item" %>
           </div>
         </li>
       </ul>
@@ -25,9 +31,38 @@
   </div>
 
 <div class="banner">
-    <h1> Mooovers </h1>
+    <h1> Leave the moooving to us </h1>
 </div>
-    <a class="main-button">Sign-in</a>
-    <a class="second-button">See you</a>
-  
- 
+
+
+<div class="cards">
+  <div class="card-feature">
+    <h1>Lorem</h1>
+      <div class="feature-1">
+      </div> 
+      <div class="feature-1">
+      </div> 
+      <div class="feature-1">
+      </div> 
+  </div>
+
+  <div class="card-feature">
+    <h1>Ipsum</h1>
+  </div>
+
+   <div class="card-feature">
+    <h1>Text</h1>
+  </div>
+
+</div>
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> at Mooovers
+  </div>
+</div>
+
