Navbar and Booking page created

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,7 +10,7 @@ a {text-decoration: none;}
   border-radius: 16px;
   font-family: $body-font;
   margin: 4px;
-
+  border: 1px solid #5466A6;
 }
 
 .main-button:hover {
