--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,14 +10,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-
         </li>
         <li class="nav-item active">
-          <%= link_to "Book a MOOOVER", root_path, class:"main-button" %>
+          <%= link_to "Book a MOOOVER", user_session_path, class:"main-button" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Become a MOOOVER", root_path, class:"second-button" %>
+          <%= link_to "Become a MOOOVER", user_session_path, class:"second-button" %>
         </li>
+        <% if user_signed_in? %>
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://previews.123rf.com/images/lar01joka/lar01joka1712/lar01joka171200130/90908712-avatar-of-a-cow.jpg" />
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -25,6 +25,7 @@
             <%= link_to "Sign-out", destroy_user_session_path, class:"dropdown-item", method: :delete%>
           </div>
         </li>
+        <% end %>
       </ul>
     </div>
   </div>
