--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,6 @@
 @import "banner";
 @import "button";
 @import "navbar";
+@import "movers-card";
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,600&family=Raleway&display=swap');
