--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 
 <p id="notice"><%= notice %></p>
-<h1>All Movers</h1>
+<h1>Find Movers around you!</h1>
 
 <div class="container">
   <div class="cards">
