--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,10 +14,16 @@
 
 body {
   background-color: #ececec54;
-  color: #484747;
 }
 
 i {
   color: #4aa904;
 }
 
+h1, h2, h3 {
+  color: #484747;
+}
+
+p {
+  color: #848282;
+}
