--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-    <a class="navbar-brand" href="#">
-      <h1 class="logo">MOOOVERS</h1>
+    <a class="navbar-brand" href="/">
+      <h1 class="logo">Moovers</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,17 +9,22 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <% if user_signed_in? == false%>
         <li class="nav-item active">
+          <%= link_to 'Sign-in', user_session_path, class: 'third-button' %>
+        </li>
+        <% end  %>
+         <% if user_signed_in? %>
+        <li class="nav-item active">
+          <%= link_to "Book a Moover", movers_path, class:"main-button" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Book a MOOOVER", user_session_path, class:"main-button" %>
+          <%= link_to "Become a Moover", root_path, class:"third-button" %>
         </li>
-        <li class="nav-item active">
-          <%= link_to "Become a MOOOVER", user_session_path, class:"second-button" %>
-        </li>
-        <% if user_signed_in? %>
+
         <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://previews.123rf.com/images/lar01joka/lar01joka1712/lar01joka171200130/90908712-avatar-of-a-cow.jpg" />
+          <!-- <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://previews.123rf.com/images/lar01joka/lar01joka1712/lar01joka171200130/90908712-avatar-of-a-cow.jpg" /> -->
+          <i class="fas fa-user-circle avatar dropdown-toggle" d="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Update your account</a>
             <%= link_to "Sign-out", destroy_user_session_path, class:"dropdown-item", method: :delete%>
