Update card css

--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -8,12 +8,12 @@
 <% end %>
 
 <p id="notice"><%= notice %></p>
-<h1>Find Movers around you!</h1>
+<h1>Find Movers around!</h1>
 
 <div class="container">
   <div class="cards">
     <% @movers.each do |mover| %>
-      <div class="card-trip">
+      <div>
         <div class="card-trip">
           <img src="https://www.tciteam.com/wp-content/uploads/2017/04/Secure-Your-Load.jpg" />
           <div class="card-trip-infos">
