--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,3 +1,8 @@
 .booking-form {
-  padding-top: 80px;
+  padding-top: 180px;
+  background-color: white;
+  padding: 32px 32px 32px 32px;
+  margin-top: 120px;
+  border-radius: 16px;
+  border: 1px solid lightgray;
 }
