--- a/app/assets/stylesheets/components/_mover-main-card.scss
+++ b/app/assets/stylesheets/components/_mover-main-card.scss
@@ -2,6 +2,7 @@
   padding: 80px 0;
   display: grid;
   grid-template-columns: 1fr 3fr;
+  margin-top: 48px;
 
 }
 
@@ -15,6 +16,8 @@
   border-radius: 16px;
   padding: 16px;
   position: relative;
+  border: 1px solid lightgray;
+
 
   p {
     background-color: #F4F4F4;
@@ -29,6 +32,9 @@
 }
 
 .mover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h2 {
     font-size: 24px;
