--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,14 @@
  
 
 <div class="banner">
-    <h1> Leave the moooving to us </h1>
+    <h1> WAIT LESS, EXPECT MORE </h1>
 </div>
 
 
 <div class="cards">
   <div class="card-feature">
-    <h1>Lorem</h1>
+    <i class="fas fa-people-carry"> </i>
+    <h3>Move Your Stuff</h3>    
       <div class="feature-1">
       </div> 
       <div class="feature-1">
@@ -18,11 +19,13 @@
   </div>
 
   <div class="card-feature">
-    <h1>Ipsum</h1>
+    <i class="fas fa-tachometer-alt"></i>
+    <h3>Faster</h3>
   </div>
 
    <div class="card-feature">
-    <h1>Text</h1>
+    <i class="fas fa-dollar-sign"></i>
+    <h3>Save Time And Money</h3>
   </div>
 
 </div>
