--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,7 +7,7 @@ a {text-decoration: none;}
   color: white;
   padding: 8px 16px;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 50px;
   font-family: $body-font;
   margin: 4px;
   border: 1px solid #5466A6;
@@ -24,7 +24,7 @@ a {text-decoration: none;}
   border: 1px solid #5466A6 ;
   padding: 8px 16px;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 50px;
   font-family: $body-font;
   margin: 4px;
 }
@@ -39,7 +39,7 @@ a {text-decoration: none;}
   border: 1px solid #5466A6 ;
   padding: 8px 16px;
   font-weight: bolder;
-  border-radius: 16px;
+  border-radius: 50px;
   font-family: $body-font;
   margin: 4px;
 }
@@ -49,4 +49,12 @@ a {text-decoration: none;}
   color: #5466A6;
 }
 
+.status-button {
+  background-color: #e9710d;
+  border: 1px solid #e9710d;
+  border-radius: 50px;
+  padding: 4px 12px;
+  color: white;
+  font-weight: 700;
+}
 
