Fixed the booking form

--- a/app/assets/stylesheets/components/_mover-main-card.scss
+++ b/app/assets/stylesheets/components/_mover-main-card.scss
@@ -1,7 +1,7 @@
 .mover-main-card {
   padding: 80px 0;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 3fr 1fr;
   margin-top: 48px;
 
 }
@@ -40,4 +40,13 @@
     font-size: 24px;
     padding: 8px 0;
   }
+}
+
+.car-img img {
+  max-width: 400px;
+  border-radius: 8px;
+}
+
+.mover-info {
+  margin: 16px;
 }
