--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,8 +1,8 @@
 .booking-form {
-  padding-top: 180px;
+  padding-top: 24px;
   background-color: white;
   padding: 32px 32px 32px 32px;
-  margin-top: 120px;
+  margin: 0 24px;
   border-radius: 16px;
   border: 1px solid lightgray;
 }
