mover/bookings index

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -33,6 +33,10 @@ a {text-decoration: none;}
   text-decoration: none;
 }
 
+.second-button toggle {
+  
+}
+
 .third-button {
   background-color: #white;
   color:#5466A6;
