--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "card";
 @import "footer";
 @import "navbar";
+@import "mover-bookings-card";
 @import "movers-card";
 @import "mover-main-card";
 @import "forms";
