Add dotenv - Protect my secret data in .env file

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "Book a Moover", movers_path, class:"main-button" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Become a Moover", root_path, class:"third-button" %>
+          <%= link_to "Become a Moover", new_mover_path, class:"third-button" %>
         </li>
 
         <li class="nav-item dropdown">
