--- a/app/views/movers/new.html.erb
+++ b/app/views/movers/new.html.erb
@@ -1,6 +1,9 @@
-<div class="container">
-  <%= form_for(@mover) do |f| %>
-
+<div class="container new-mover">
+  <%= simple_form_for @mover do |f| %>
+    <%= f.input :name %>
+    <%= f.input :type_of_car, collection: Mover::SIZE_OF_CARS%>
+    <%= f.input :description %>
+    <%= f.input :price %>
+    <%= f.submit class: 'main-button' %>
   <% end %>
-
 </div>
