--- a/app/views/movers/show.html.erb
+++ b/app/views/movers/show.html.erb
@@ -5,10 +5,14 @@
         <div class="mover-info row justify-content-around align-items-center">
           <div class="mover">
             <img class="avatar-xlarge" src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg">
-            <h2><%= @mover.name %></h2>
+            <h2><%= @mover.user.name %></h2>
           </div>
           <div class="car-img">
-            <img src="https://www.tciteam.com/wp-content/uploads/2017/04/Secure-Your-Load.jpg" alt="">
+            <% if @mover.image.attached? %>
+              <%= cl_image_tag @mover.image.key %>
+            <% else %>
+              <img src="https://www.tciteam.com/wp-content/uploads/2017/04/Secure-Your-Load.jpg" alt="">
+            <% end %>
           </div>
         </div>
         <div class="mover-card">
