--- a/app/views/movers/show.html.erb
+++ b/app/views/movers/show.html.erb
@@ -16,7 +16,8 @@
           </div>
         </div>
         <div class="mover-card">
-          <p><i class="fas fa-car"> </i> Type of car: <%= @mover.type_of_car %></p>
+          <p><i class="fas fa-car"></i> Type of car: <%= @mover.type_of_car %> </p>
+          <p><i class="fas fa-map-marked-alt"> </i> Location: <%= @mover.address %></p>
           <p><i class="fas fa-yen-sign"> </i> Price: ¥<%= @mover.price %></p>
           <p><i class="fas fa-info-circle"> </i> Description: <%= @mover.description %></p>
         </div>
@@ -26,5 +27,4 @@
       </div>
     <% end %>
   </div>
-
 </div>
