--- a/app/views/movers/new.html.erb
+++ b/app/views/movers/new.html.erb
@@ -2,6 +2,7 @@
   <%= simple_form_for @mover do |f| %>
     <%= f.input :name, label: 'Car Name' %>
     <%= f.input :type_of_car, collection: Mover::SIZE_OF_CARS%>
+    <%= f.input :address, label: 'Location' %>
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :image, as: :file, label: 'Car Image' %>
