Geocoding in progress

--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%#= notice %></p>
 <%# <h1>Lisf of Movers</h1> %>
-
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
 <p>Current User email: <%= current_user.email %></p>
 <p>Current User ID: <%= current_user.id %></p><% if policy(Mover).index? %>
@@ -19,6 +22,7 @@
           <div class="card-trip-infos">
             <div>
               <h2><%= mover.type_of_car %></h2><hr>
+              <h2><%= mover.address %></h2><hr>
               <p style="margin-right: 12px"><strong><em>Driver</em></strong>: <%= mover.name %></p><br>
               <h2 class="card-trip-pricing">¥<%= mover.price %> / 10 km</h2>
             </div>
@@ -42,3 +46,7 @@
 <% if policy(Mover).new? %>
   <%= link_to 'New Mover', new_mover_path %>
 <% end %>
+
+<hr>
+
+<hr>
