--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -44,7 +44,7 @@
           </p>
         </div>
         <div>
-          <%= link_to 'Details', bookings_path, class: 'third-button' %>
+          <%= link_to 'Details',  mover_booking_path , class: 'third-button' %>
         </div>
       </div>
     </div>
