--- a/app/assets/stylesheets/components/_mover-bookings-card.scss
+++ b/app/assets/stylesheets/components/_mover-bookings-card.scss
@@ -1,7 +1,7 @@
 // .big-container {
 //   display: flex;
 //   margin-top: 32px;
-  
+
 // }
 
 .element-container {
@@ -44,7 +44,11 @@
   align-items: flex-end;
   justify-content: space-between;
 }
-.accept a { 
+.accept a {
   display: block;
+}
+
+.all-abookings {
+  margin: 10px auto;
 }
 
