--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 @import "movers-card";
 @import "mover-main-card";
 @import "forms";
+@import "booking";
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,600&family=Raleway&display=swap');
 
