--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -3,7 +3,7 @@
 
 <p>Current User email: <%= current_user.email %></p>
 <p>Current User ID: <%= current_user.id %></p><% if policy(Mover).index? %>
-  <%#= link_to "List all Movers", movers_path %>
+<%#= link_to "List all Movers", movers_path %>
 <% end %>
 
 <p id="notice"><%= notice %></p>
@@ -12,47 +12,49 @@
 <div class="container">
   <div>
     <%= form_with url: movers_path, method: :get, local: true do %>
-      <%= text_field_tag :start_point, params[:start_point], class: 'form-control', id: 'booking_start_point' , placeholder: "From:" %>
-      <%= text_field_tag :end_point , params[:end_point], class: 'form-control', id: 'booking_end_point', placeholder: "To:" %>
-      <%= select_tag :query, options_for_select(Mover::SIZE_OF_CARS, params[:query]),
+    <%= text_field_tag :start_point, params[:start_point], class: 'form-control', id: 'booking_start_point' , placeholder: "From:" %>
+    <%= text_field_tag :end_point , params[:end_point], class: 'form-control', id: 'booking_end_point', placeholder: "To:" %>
+    <%= select_tag :query, options_for_select(Mover::SIZE_OF_CARS, params[:query]),
         class: 'form-control'
       %>
-      <%= submit_tag "Search", class: 'third-button' %>
+    <%= submit_tag "Search", class: 'third-button' %>
     <% end %>
   </div>
   <div class="cards">
     <% @movers.each do |mover| %>
-      <div>
-        <div class="card-trip">
-          <% if mover.image.attached? %>
-            <%= cl_image_tag mover.image.key %>
-          <% else %>
-            <img src="https://www.tciteam.com/wp-content/uploads/2017/04/Secure-Your-Load.jpg" />
-          <% end %>
-          <div class="card-trip-infos">
-            <div>
-              <h2><%= mover.name %></h2><hr>
-              <p><i class="fas fa-user-circle"></i></i> <%= mover.user.name %></p>
-              <p><i class="fas fa-map-marked-alt"></i> <%= mover.address %></p>
-              <br>
-              <h2 class="card-trip-pricing">¥<%= mover.price %> / 10 km</h2>
-            </div>
-              <a><%= link_to 'Book', mover_path(mover), class:'main-button'%></a>
-            <img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" class="card-trip-user avatar-bordered" />
+    <div>
+      <div class="card-trip">
+        <% if mover.image.attached? %>
+        <%= cl_image_tag mover.image.key %>
+        <% else %>
+        <img src="https://www.tciteam.com/wp-content/uploads/2017/04/Secure-Your-Load.jpg" />
+        <% end %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= mover.name %></h2>
+            <hr>
+            <p><i class="fas fa-user-circle"></i></i> <%= mover.user.name %></p>
+            <p><i class="fas fa-map-marked-alt"></i> <%= mover.address %></p>
+            <br>
+            <h2 class="card-trip-pricing">¥<%= mover.price %> / 10 km</h2>
           </div>
+          <a><%= link_to 'Book', mover_path(mover), class:'main-button'%></a>
+          <img
+            src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg"
+            class="card-trip-user avatar-bordered" />
         </div>
       </div>
-      <% if policy(mover).edit? %>
-        <td><%= link_to 'Edit', edit_mover_path(mover) %></td>
-      <% end %>
-      <% if policy(mover).destroy? %>
-        <td><%= link_to 'Destroy', mover, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+    </div>
+    <% if policy(mover).edit? %>
+    <td><%= link_to 'Edit', edit_mover_path(mover) %></td>
+    <% end %>
+    <% if policy(mover).destroy? %>
+    <td><%= link_to 'Destroy', mover, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
     <% end %>
   </div>
 </div>
 
 <% if policy(Mover).new? %>
-  <%= link_to 'New Mover', new_mover_path %>
+<%= link_to 'New Mover', new_mover_path %>
 <% end %>
-
