--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -39,14 +39,14 @@
                 <div class="label">Price: </div><strong>¥<%= booking.mover.price %></strong>
               </p>
               <p>
-                <div class="label">Description: </div><%= booking.mover.description %>
+                <div class="label">Availability </div><%= booking.mover.description %>
               </p>
             </div>
             <div>
-              <%= link_to 'Details',  mover_booking_path , class: 'third-button' %>
+
             </div>
           </div>
-        
+
       </div>
     </div>
 
