--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,6 +27,7 @@
           <i class="fas fa-user-circle avatar dropdown-toggle" d="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ></i>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to 'My Bookings', bookings_path, class:"dropdown-item"  %>
+            <%= link_to 'Requests', mover_booking_path, class:"dropdown-item"  %>
             <%= link_to "Sign-out", destroy_user_session_path, class:"dropdown-item", method: :delete%>
           </div>
         </li>
