--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,7 +34,7 @@ a {text-decoration: none;}
 }
 
 .second-button toggle {
-  
+
 }
 
 .third-button {
@@ -54,8 +54,8 @@ a {text-decoration: none;}
 }
 
 .status-button {
-  background-color: #e9710d;
-  border: 1px solid #e9710d;
+  background-color: #3c8255;
+  border: 1px solid #3c8255;
   border-radius: 50px;
   padding: 4px 12px;
   color: white;
