--- a/app/views/mover/bookings/index.html.erb
+++ b/app/views/mover/bookings/index.html.erb
@@ -6,25 +6,24 @@
       <div class="minimal-container">
         <div class="element-container">
           <p><%= booking.date_time %></p>
-          <p><%= booking.user.name %></p>
-          <p><%= booking.start_point %></p>
-          <p><%= booking.end_point %></p>
+          <p>Name: <%= booking.user.name %></p>
+          <p>From: <%= booking.start_point %></p>
+          <p>To: <%= booking.end_point %></p>
         </div>
         <div class="element-container">
-          <p><%= booking.status %></p>
-          <p>¥<%= booking.mover.price %></p> 
-          <button type="button" class="second-button toggle-btn" data-id="<%= booking.id %>">Details</button>
+          <p class="status-button"> <%= booking.status %></p>
+          <p>¥<%= booking.mover.price %></p>
+          <button type="button" class="third-button toggle-btn" data-id="<%= booking.id %>">Details</button>
         </div>
       </div>
     </div>
     <div class="description-wrapper d-none" data-booking-id="<%= booking.id %>">
       <div class="description-top">
-        <p><%= booking.description %></p>
-        <p>Distance</p>
+        <p>Description: <%= booking.description %></p>
       </div>
       <div class="description-bottom">
-        <%= link_to "Call the user", "", class: "second-button"  %>
-        <%= link_to "Chat with the user", "", class: "second-button" %>
+        <%= link_to "Call the user", "", class: "third-button"  %>
+        <%= link_to "Chat with the user", "", class: "third-button" %>
         <div class="accept">
           <%= simple_form_for booking do |f|%>
             <%= f.input :status, input_html: { value: 'Accepted'}, as: :hidden %>
@@ -32,13 +31,13 @@
           <% end %>
           <%= simple_form_for booking do |f|%>
             <%= f.input :status, input_html: { value: 'Rejected'}, as: :hidden %>
-            <%= f.submit "Reject", class: 'main-button' %>
-          <% end %>          
+            <%= f.submit "Reject", class: 'second-button' %>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
-      
+
   <% end  %>
 
 </div>
