--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -29,3 +29,12 @@ h1, h2, h3 {
 p {
   color: #848282;
 }
+
+.notice, .alert {
+  margin: 0;
+}
+
+.devise-container {
+  width: 400px;
+  margin: 32px auto;
+}
