--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -21,25 +21,26 @@
           <% end %>
           <div class="card-trip-infos">
             <div>
-              <h2><%= mover.name %></h2><hr>
+              <h2><%= mover.name %></h2>
+              <hr>
               <p><i class="fas fa-user-circle"></i></i> <%= mover.user.name %></p>
-              <p><i class="fas fa-map-marked-alt"></i> <%= mover.address %></p>
-              <br>
-              <h2 class="card-trip-pricing">¥<%= mover.price %> / 10 km</h2>
-            </div>
-            <a><%= link_to 'Book', mover_path(mover, start_point: params[:start_point], end_point: params[:end_point]), class: 'main-button' %></a>
-            <img src="https://www.biography.com/.image/t_share/MTQ3NjM5MTEzMTc5MjEwODI2/eminem_photo_by_dave_j_hogan_getty_images_entertainment_getty_187596325.jpg" class="card-trip-user avatar-bordered" />
+            <p><i class="fas fa-map-marked-alt"></i> <%= mover.address %></p>
+            <br>
+            <h2 class="card-trip-pricing">¥<%= mover.price %> / 10 km</h2>
           </div>
+          <a><%= link_to 'Book', mover_path(mover, start_point: params[:start_point], end_point: params[:end_point]), class: 'main-button' %></a>
+          <img src="https://www.spiritmarine.com.br/wp-content/uploads/2020/02/iconfinder_male_628288.png" class="card-trip-user avatar-bordered" />
         </div>
       </div>
-      <% if policy(mover).edit? %>
-        <td><%= link_to 'Edit', edit_mover_path(mover) %></td>
-      <% end %>
-      <% if policy(mover).destroy? %>
-        <td><%= link_to 'Destroy', mover, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+    </div>
+    <% if policy(mover).edit? %>
+      <td><%= link_to 'Edit', edit_mover_path(mover) %></td>
     <% end %>
-  </div>
+    <% if policy(mover).destroy? %>
+      <td><%= link_to 'Destroy', mover, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
+  <% end %>
+</div>
 </div>
 <% if policy(Mover).new? %>
   <%link_to 'New Mover', new_mover_path %>
