--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,35 +1,29 @@
-
- 
-
-<div class="banner">
-    <h1> WAIT LESS, EXPECT MORE </h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1513880989635-6eb491ce7f5b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80);">
+  <div class="banner-info">
+    <h1> Innovative Delivery Solution </h1>
+    <h4>Find a Moover end get your shoppings delivered within the same day.</h4>
+  </div>
 </div>
-
-
-<div class="cards">
+<div class="home-cards">
   <div class="card-feature">
     <i class="fas fa-people-carry"> </i>
-    <h3>Move Your Stuff</h3>    
-      <div class="feature-1">
-      </div> 
-      <div class="feature-1">
-      </div> 
-      <div class="feature-1">
-      </div> 
+    <h3>Move Your Stuff</h3>
+    <div class="feature-1">
+    </div>
+    <div class="feature-1">
+    </div>
+    <div class="feature-1">
+    </div>
   </div>
-
   <div class="card-feature">
     <i class="fas fa-tachometer-alt"></i>
     <h3>Faster</h3>
   </div>
-
-   <div class="card-feature">
+  <div class="card-feature">
     <i class="fas fa-dollar-sign"></i>
     <h3>Save Time And Money</h3>
   </div>
-
 </div>
-
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -39,4 +33,3 @@
     This footer is made with <i class="fas fa-heart"></i> at Mooovers
   </div>
 </div>
-
