--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,27 +1,24 @@
- <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-    <a class="navbar-brand" href="/">
-      <h1 class="logo"><i class="fas fa-shipping-fast"></i>moovers</h1>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <% if user_signed_in? == false%>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <a class="navbar-brand" href="/">
+    <h1 class="logo"><i class="fas fa-shipping-fast"></i>moovers</h1>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to "Find a Moover", movers_path, class:"main-button" %>
+      </li>
+      <% if user_signed_in? == false%>
         <li class="nav-item active">
           <%= link_to 'Sign-in', user_session_path, class: 'third-button' %>
         </li>
-        <% end  %>
-         <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Book a Moover", movers_path, class:"main-button" %>
-        </li>
+      <% end  %>
+      <% if user_signed_in? %>
         <li class="nav-item active">
           <%= link_to "Become a Moover", new_mover_path, class:"third-button" %>
         </li>
-
         <li class="nav-item dropdown">
           <!-- <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://previews.123rf.com/images/lar01joka/lar01joka1712/lar01joka171200130/90908712-avatar-of-a-cow.jpg" /> -->
           <i class="fas fa-user-circle avatar dropdown-toggle" d="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ></i>
@@ -31,7 +28,7 @@
             <%= link_to "Sign-out", destroy_user_session_path, class:"dropdown-item", method: :delete%>
           </div>
         </li>
-        <% end %>
-      </ul>
-    </div>
+      <% end %>
+    </ul>
   </div>
+</div>
