welcome email edit

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,8 +1,8 @@
 <p>Dear <%= @user.name%>,</p>
 
-<p>We wanted to officially welcome you to Moovers.</p>
+<p>Welcome to Moovers.</p>
 
-<p> Make yourself at home!</p>
+<p>Make yourself at home!</p>
 
 <p>All the best,</p>
 
